Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -90,6 +90,8 @@ Proof of the theorem: $H = p\dot{q}-L = \frac{\partial L}{\partial \dot{q}} \dot
 \end{equation}
 where $\mathbf{p}(t)$ and $\mathbf{q}(t)$ are solutions of Hamilton's system of equations. 
 
+\textbf{Theorem 1}: The phase flow preserves volume: for any region $D$, the volume $V$ satisfies $V(g^t D)=V(D)$. 
+
 
 
 \begin{comment}
