Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -43,7 +43,7 @@
 \begin{center}
 {\LARGE \bf Lagrangian Mechanics}\\
 {\large Theoretical Mechanics}\\
-% Fall 2025
+%% Fall 2025
 \end{center}
 
 \section{Calculus of Variations}
