Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -221,6 +221,7 @@ m\ddot{r} = mg_0 + F_{\text{cf}} + F_{\text{cor}}
 \subsection{The Foucault Pendulum}
 See chapter 9, Page 354. There is no need to recopy what is in the book here. 
 
+% Comments are original tex code for examples
 
 \end{comment}
 
