Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -64,6 +64,8 @@ Theorem: the curve $\gamma$ is an extremal of the functional $\Phi(\gamma) = \in
 
 
 \newpage
+\subsection{Legendre transformation}
+
 \subsection{Hamilton's equations}
 \subsubsection{Equivalence of Lagrange's and Hamilton's equations}
 
