Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -65,6 +65,7 @@ Theorem: the curve $\gamma$ is an extremal of the functional $\Phi(\gamma) = \in
 
 \newpage
 \subsection{Legendre transformation}
+\textbf{Definition}: Let $y=f(x)$ be a convex function which means $f''(x)>0$. And the Legendre transformation of the function $f$ is a new function $g$ of a new variable $p$, which is constructed in such a method. 
 
 \subsection{Hamilton's equations}
 \subsubsection{Equivalence of Lagrange's and Hamilton's equations}
