--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -67,6 +67,13 @@ Theorem: the curve $\gamma$ is an extremal of the functional $\Phi(\gamma) = \in
 \subsection{Legendre transformation}
 \textbf{Definition}: Let $y=f(x)$ be a convex function which means $f''(x)>0$. And the Legendre transformation of the function $f$ is a new function $g$ of a new variable $p$, which is constructed in such a method. 
 
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Fig 1-3-1.png}
+    \caption{Legendre transformation}
+    \label{Fig 1-3-1}
+\end{figure}
+
 \subsection{Hamilton's equations}
 \subsubsection{Equivalence of Lagrange's and Hamilton's equations}
 
