Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -65,7 +65,7 @@ Theorem: the curve $\gamma$ is an extremal of the functional $\Phi(\gamma) = \in
 
 \newpage
 \subsection{Legendre transformation}
-\textbf{Definition}: Let $y=f(x)$ be a convex function which means $f''(x)>0$. And the Legendre transformation of the function $f$ is a new function $g$ of a new variable $p$, which is constructed in such a method. 
+\textbf{Definition}: Let $y=f(x)$ be a convex function which means $f''(x)>0$. And the \textbf{Legendre transformation} of the function $f$ is a new function $g$ of a new variable $p$, which is constructed in such a method: Draw the graph of $f$ in $x-y$ plane, and consider the line $y=px$ in which $p$ is a given number. For each $p$ the function $F(p,x)=px-f(x)$ has a maximum value with respect to $x$ at the point $x(p)$. We define $g(p)=F(p,x(p))$. 
 
 \begin{figure}[h]
     \centering
