Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -74,6 +74,8 @@ Theorem: the curve $\gamma$ is an extremal of the functional $\Phi(\gamma) = \in
     \label{Fig 1-3-1}
 \end{figure}
 
+The point $x(p)$ is defined by the extremal condition $\partial F / \partial x=0$, and $f'(x)=p$. The point $x(p)$ is unique for convex function $f$. 
+
 \subsection{Hamilton's equations}
 \subsubsection{Equivalence of Lagrange's and Hamilton's equations}
 
