Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -54,7 +54,7 @@ Definitions of \textbf{differentiable} and \textbf{differential}: the functional
 Example: A curve $\gamma$ in $(t,x)$-plane: $\gamma = \{ (t,x): x=x(t), t_0 \leq t \leq t_1 \} $. 
 
 \subsection{The Euler-Lagrange Equation}
-Definition: the equation \begin{equation}
+\textbf{Definition}: the equation \begin{equation}
     \frac{\mathrm{d}}{\mathrm{d}t} \left( \frac{\partial L}{\partial \dot{x}} \right) - \frac{\partial L}{\partial x} =0
 \end{equation} is the \textbf{Euler-Lagrange equation} of the functional \begin{equation}
     \Phi = \int_{t_0}^{t_1} L(x,\dot{x}, t) \mathrm{d}t. 
