--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -98,6 +98,11 @@ Proof of the theorem: $H = p\dot{q}-L = \frac{\partial L}{\partial \dot{q}} \dot
 \textbf{Corollary} $\frac{\mathrm{d}H}{\mathrm{d}t} = \frac{\partial H}{\partial t}$: If a system ...
 
 
+
+\subsubsection{Cyclic coordinates}
+
+
+
 \subsection{Liouville's Theorem}
 \textbf{Definition}: \textbf{Phase space} is the $2n$-dimensional space with coordinates $p_1 , \dots , p_n ; q_1, \dots , q_n$. \textbf{Phase flow} is the one-parameter group of transformations of phase space \begin{equation}
     g^t : (\mathbf{p}(0),\mathbf{q}(0)) \xrightarrow{} (\mathbf{p}(t),\mathbf{q}(t))
