Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -80,6 +80,7 @@ The point $x(p)$ is defined by the extremal condition $\partial F / \partial x=0
 
 \subsection{Hamilton's equations}
 \subsubsection{Equivalence of Lagrange's and Hamilton's equations}
+Assuming Lagrangian $L$ is convex with respect to $\dot{q}$, and the system of Lagrange's equation $\dot{p}=\partial L / \partial q$. 
 
 
 \subsubsection{Hamilton's function and energy} 
