Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -59,7 +59,7 @@ Example: A curve $\gamma$ in $(t,x)$-plane: $\gamma = \{ (t,x): x=x(t), t_0 \leq
 \end{equation} is the \textbf{Euler-Lagrange equation} of the functional \begin{equation}
     \Phi = \int_{t_0}^{t_1} L(x,\dot{x}, t) \mathrm{d}t. 
 \end{equation}
-Theorem: the curve $\gamma$ is an extremal of the functional $\Phi(\gamma) = \int_{t_0}^{t_1} L(x,\dot{x}, t) \mathrm{d}t$ on the space of curves joining $(t_0,x_0)$ and $(t_1, x_1)$ if and only if the Euler-Lagrange equation is satisfied along $\gamma$. 
+\textbf{Theorem}: the curve $\gamma$ is an extremal of the functional $\Phi(\gamma) = \int_{t_0}^{t_1} L(x,\dot{x}, t) \mathrm{d}t$ on the space of curves joining $(t_0,x_0)$ and $(t_1, x_1)$ if and only if the Euler-Lagrange equation is satisfied along $\gamma$. 
 
 The condition for a curve y to be an extremal of a functional does not depend on the choice of coordinate system.
 
