Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -114,6 +114,8 @@ where $\mathbf{p}(t)$ and $\mathbf{q}(t)$ are solutions of Hamilton's system of 
 \textbf{Theorem 1}: The phase flow preserves volume: for any region $D$, the volume $V$ satisfies $V(g^t D)=V(D)$. 
 
 
+\subsubsection{Liouville's theorem and its proof}
+
 
 \begin{comment}
 
