Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -116,6 +116,8 @@ where $\mathbf{p}(t)$ and $\mathbf{q}(t)$ are solutions of Hamilton's system of 
 
 \subsubsection{Liouville's theorem and its proof}
 
+\subsubsection{Poincare's recurrence theorem}
+
 
 \begin{comment}
 
