Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -46,7 +46,7 @@
 % Fall 2025
 \end{center}
 
-\section{Calculus of Variations}
+\section{Calculus of Variations} % using the calculus of variations to study the mechanical problems in physics
 The \textbf{calculus of variations}, is concerned with the extremals of functions whose domain is an infinite-dimensional space: the space of curves. Such functions are called \textbf{functionals}. 
 \subsection{Variations and Extremals}
 Definitions of \textbf{differentiable} and \textbf{differential}: the functional $\Phi$ is \textit{differentiable} if $\Phi (\gamma +h) - \Phi(\gamma) = F+R$ where $F$ depends linearly on $h$. The linear part $F(h)$ is the \textit{differential} of $\Phi$.
