Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -46,14 +46,15 @@
 % Fall 2025
 \end{center}
 
-\section{Calculus of Variations} % using the calculus of variations to study the mechanical problems in physics
+\section{Variational principles}
+\subsection{Calculus of Variations}  % using the calculus of variations to study the mechanical problems in physics
 The \textbf{calculus of variations}, is concerned with the extremals of functions whose domain is an infinite-dimensional space: the space of curves. Such functions are called \textbf{functionals}. 
-\subsection{Variations and Extremals}
+\subsubsection{Variations and Extremals}
 Definitions of \textbf{differentiable} and \textbf{differential}: the functional $\Phi$ is \textit{differentiable} if $\Phi (\gamma +h) - \Phi(\gamma) = F+R$ where $F$ depends linearly on $h$. The linear part $F(h)$ is the \textit{differential} of $\Phi$.
 
 Example: A curve $\gamma$ in $(t,x)$-plane: $\gamma = \{ (t,x): x=x(t), t_0 \leq t \leq t_1 \} $. 
 
-\subsection{The Euler-Lagrange Equation}
+\subsubsection{The Euler-Lagrange Equation}
 \textbf{Definition}: the equation \begin{equation}
     \frac{\mathrm{d}}{\mathrm{d}t} \left( \frac{\partial L}{\partial \dot{x}} \right) - \frac{\partial L}{\partial x} =0
 \end{equation} is the \textbf{Euler-Lagrange equation} of the functional \begin{equation}
@@ -117,6 +118,10 @@ where $\mathbf{p}(t)$ and $\mathbf{q}(t)$ are solutions of Hamilton's system of 
 \subsubsection{Liouville's theorem and its proof}
 
 \subsubsection{Poincare's recurrence theorem}
+
+
+\section{Lagrangian mechanics on manifolds}
+\subsection{Holonomic constraints}
 
 
 \begin{comment}
@@ -246,7 +251,6 @@ m\ddot{r} = mg_0 + F_{\text{cf}} + F_{\text{cor}}
 \subsection{The Foucault Pendulum}
 See chapter 9, Page 354. There is no need to recopy what is in the book here. 
 
-% Comments are original tex code for examples
 
 \end{comment}
 
