Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -120,6 +120,7 @@ where $\mathbf{p}(t)$ and $\mathbf{q}(t)$ are solutions of Hamilton's system of 
 \subsubsection{Poincare's recurrence theorem}
 
 
+\newpage
 \section{Lagrangian mechanics on manifolds}
 \subsection{Holonomic constraints}
 
