Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -124,6 +124,12 @@ where $\mathbf{p}(t)$ and $\mathbf{q}(t)$ are solutions of Hamilton's system of 
 \section{Lagrangian mechanics on manifolds}
 \subsection{Holonomic constraints}
 
+\subsection{Differentiable manifolds}
+
+\subsection{Lagrangian dynamical systems}
+
+\subsection{E. Noether's theorem}
+
 
 \begin{comment}
 
