Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -130,6 +130,8 @@ where $\mathbf{p}(t)$ and $\mathbf{q}(t)$ are solutions of Hamilton's system of 
 
 \subsection{E. Noether's theorem}
 
+\subsection{D'Alembert's principle}
+
 
 \begin{comment}
 
