--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -88,7 +88,7 @@ Assuming Lagrangian $L$ is convex with respect to $\dot{q}$, and the system of L
     & \dot{\mathrm{p}} = -\frac{\partial H}{\partial \mathrm{q}} \\
     & \dot{\mathrm{q}} = \frac{\partial H}{\partial \mathrm{p}}, 
 \end{align}
-where $H(\mathrm{p}, \mathrm{q}, t) = \mathrm{p}\dot{\mathrm{q} - L (\mathrm{q}, \dot{\mathrm{q}}, t)}$ is the Legendre transform of the lagrangian function, which is viewed as a function of $\dot{\mathrm{q}}$. 
+where $H(\mathrm{p}, \mathrm{q}, t) = \mathrm{p}\mathrm{q} - L (\mathrm{q}, \dot{\mathrm{q}}, t)$ is the Legendre transform of the lagrangian function, which is viewed as a function of $\dot{\mathrm{q}}$. 
 
 Proof of the theorem: 
 
