Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -90,7 +90,7 @@ Assuming Lagrangian $L$ is convex with respect to $\dot{q}$, and the system of L
 \end{align}
 where $H(\mathrm{p}, \mathrm{q}, t) = \mathrm{p}\mathrm{q} - L (\mathrm{q}, \dot{\mathrm{q}}, t)$ is the Legendre transform of the lagrangian function, which is viewed as a function of $\dot{\mathrm{q}}$. 
 
-Proof of the theorem: 
+Proof of the theorem: The Legendre transform of $L$ with respect to $\dot{q}$ is $H(p) = p \dot{q} - L(\dot{q})$, since $\frac{\partial H}{\partial \dot{q}} = 0$ in Legendre transform, we get $p=\frac{\partial L}{\partial \dot{q}}$, so it depends on $q$ and $t$.  
 
 
 \subsubsection{Hamilton's function and energy} 
