--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -111,7 +111,7 @@ Proof of the lemma: for a quadratic form $f(x)=\frac{1}{2}\sum_{i,j} a_{ij} x_i 
 
 Proof of the theorem: $H = p\dot{q}-L = \frac{\partial L}{\partial \dot{q}} \dot{q}-L$, since $L=T(q,\dot{q},t)-U(q)$, applying Euler’s theorem and we get $H = \frac{\partial T}{\partial \dot{q}} \dot{q}-(T-U)=2T-(T-U)=T+U$. 
 
-\textbf{Corollary} $\frac{\mathrm{d}H}{\mathrm{d}t} = \frac{\partial H}{\partial t}$: If a system ...
+\textbf{Corollary} $\frac{\mathrm{d}H}{\mathrm{d}t} = \frac{\partial H}{\partial t}$: If a system whose $hamiltonian$ function ...
 
 
 
