--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -111,8 +111,11 @@ Proof of the lemma: for a quadratic form $f(x)=\frac{1}{2}\sum_{i,j} a_{ij} x_i 
 
 Proof of the theorem: $H = p\dot{q}-L = \frac{\partial L}{\partial \dot{q}} \dot{q}-L$, since $L=T(q,\dot{q},t)-U(q)$, applying Euler’s theorem and we get $H = \frac{\partial T}{\partial \dot{q}} \dot{q}-(T-U)=2T-(T-U)=T+U$. 
 
-\textbf{Corollary} $\frac{\mathrm{d}H}{\mathrm{d}t} = \frac{\partial H}{\partial t}$: If a system whose $hamiltonian$ function satisfies $\frac{\partial H}{\partial t}=0$, which means does not depend explicitly on time, the laws of conservation holds: $H(\mathrm{p}(t), \mathrm{q}(t)=const$.
+\textbf{Corollary} $\frac{\mathrm{d}H}{\mathrm{d}t} = \frac{\partial H}{\partial t}$: If a system whose $hamiltonian$ function satisfies $\frac{\partial H}{\partial t}=0$, which means does not depend explicitly on time, the laws of conservation holds: $H(\mathbf{p}(t), \mathbf{q}(t)=const$.
 
+Proof of the corollary: \begin{equation}
+    \frac{\mathrm{d}H}{\mathrm{d}t} = \frac{\partial H}{\partial p} \frac{\partial p}{\partial t} + \frac{\partial H}{\partial q}\frac{\partial q}{\partial t} + \frac{\partial H}{\partial t} = \frac{\partial H}{\partial p} \left(- \frac{\partial H}{\partial q} \right) + \frac{\partial H}{\partial q} \frac{\partial H}{\partial p} + \frac{\partial H}{\partial t}=\frac{\partial H}{\partial t}.
+\end{equation}
 
 
 \subsubsection{Cyclic coordinates}
