Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -140,6 +140,8 @@ where $\mathbf{p}(t)$ and $\mathbf{q}(t)$ are solutions of Hamilton's system of 
 \newpage
 \section{Lagrangian mechanics on manifolds}
 \subsection{Holonomic constraints}
+Let $\gamma$ be a smooth curve in the plane. For curvilinear coordinates $q_1$ on $\gamma$, and $q_2$ on a neighborhood of $\gamma$. 
+
 considering the system with potential energy: 
 
 
