Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -142,7 +142,9 @@ where $\mathbf{p}(t)$ and $\mathbf{q}(t)$ are solutions of Hamilton's system of 
 \subsection{Holonomic constraints}
 Let $\gamma$ be a smooth curve in the plane. For curvilinear coordinates $q_1$ on $\gamma$, and $q_2$ on a neighborhood of $\gamma$. 
 
-considering the system with potential energy: 
+considering the system with potential energy: \begin{equation}
+    U_N = N q_{2}^2 + U_0 (q_1, q_2),
+\end{equation} in which 
 
 
 \subsection{Differentiable manifolds}
