Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -144,7 +144,7 @@ Let $\gamma$ be a smooth curve in the plane. For curvilinear coordinates $q_1$ o
 
 considering the system with potential energy: \begin{equation}
     U_N = N q_{2}^2 + U_0 (q_1, q_2),
-\end{equation} in which $N$ is the parameter tending to infinity. 
+\end{equation} in which $N$ is the parameter tending to infinity. $q_1 = \varphi (t,N)$ for ... 
 
 
 \subsection{Differentiable manifolds}
