--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -142,7 +142,7 @@ where $\mathbf{p}(t)$ and $\mathbf{q}(t)$ are solutions of Hamilton's system of 
 \subsection{Holonomic constraints}
 Let $\gamma$ be a smooth curve in the plane. For curvilinear coordinates $q_1$ on $\gamma$, and $q_2$ on a neighborhood of $\gamma$. 
 
-considering the system with potential energy: \begin{equation}
+Considering the system with potential energy: \begin{equation}
     U_N = N q_{2}^2 + U_0 (q_1, q_2),
 \end{equation} in which $N$ is the parameter tending to infinity. The evolution of the coordinate $q_1$ under a motion with these initial conditions... 
 
