--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -144,7 +144,8 @@ Let $\gamma$ be a smooth curve in the plane. For curvilinear coordinates $q_1$ o
 
 Considering the system with potential energy: \begin{equation}
     U_N = N q_{2}^2 + U_0 (q_1, q_2),
-\end{equation} in which $N$ is the parameter tending to infinity. The evolution of the coordinate $q_1$ under a motion with these initial conditions... 
+\end{equation} in which $N$ is the parameter tending to infinity, and the initial conditions on $\gamma$: ...  . 
+The evolution of the coordinate $q_1$ under a motion with these initial conditions ... 
 
 
 \subsection{Differentiable manifolds}
