Update Lagrangian Mechanics Notes.tex

--- a/Lagrangian Mechanics Notes.tex
+++ b/Lagrangian Mechanics Notes.tex
@@ -119,7 +119,7 @@ Proof of the corollary: \begin{equation}
 
 
 \subsubsection{Cyclic coordinates}
-For central fields, a problem can be reduced to a one-dimensional problem by using polar coordinates. 
+For central fields, a problem can be reduced to a one-dimensional problem by using polar coordinates. The symmetry to a problem is crucial. 
 
 
 
